--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,7 +7,7 @@
 entries:
   - title: info
     entries:
-      - title: 이것저것...?
+      - title: 이것저것
       #  url: https://github.com/riggraz/no-style-please
       #- title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
       
