--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,16 +5,15 @@
 #url(url이 있으면 title이 특정 url로 이동) 또는 <a> 해도 같은 기능 수행
 #post_list : true로 설정하면 list of posts를 가짐
 entries:
-  - title: 이것저것
+  - title: 공부용
    # entries:
    #   - title: 이것저것
       #  url: https://github.com/riggraz/no-style-please
       #- title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
       
-  - title: 텍스트 데이터 레이블이 불균형할 때 편향된(biased) 결과가 나오지 않도록 하기
+  - title: 연구용
     post_list:
-      limit: 1
-      category: FNC1
+      category: STUDY
       show_more: true
       
   #- title: all posts
