--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,17 +1,12 @@
 # For documentation on this file, see:
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
-#entries > title / url / post_list
-#url(url이 있으면 title이 특정 url로 이동) 또는 <a> 해도 같은 기능 수행
-#post_list : true로 설정하면 list of posts를 가짐
 entries:
-  - title: 공부용
-   # entries:
-   #   - title: 이것저것
-      #  url: https://github.com/riggraz/no-style-please
-      #- title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+  - title: 소개
+    entries:
+      -title: ...
       
-  - title: 연구용
+  - title: 공부하고 있는 NLP 문제
     post_list:
       category: STUDY
       show_more: true
