--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,8 +5,8 @@ entries:
   - title: 소개
     entries:
       -title: ...
-     
-print('\n')  
+    entries:
+    
   - title: 연구하고 있는 NLP Task
     post_list:
       category: STUDY
