--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ entries:
   - title: 소개
     entries:
       -title: ...
-    entries:
+      -title:
     
   - title: 연구하고 있는 NLP Task
     post_list:
