--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,9 +4,8 @@
 entries:
   - title: 소개
     entries:
-      -title: ...
+      -title: ...\n
       
-  - title:
     
   - title: 연구하고 있는 NLP Task
     post_list:
