--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,15 +4,15 @@
 entries:
   - title: 소개
     entries:
-      -title: ...\n
+      -title: Natural Language Processing, Machine Learning
       
     
-  - title: 연구하고 있는 NLP Task
+  - title: 연구 내용
     post_list:
       category: STUDY
       show_more: true
       
-  - title: 공부하고 있는 ML 및 NLP 모델 이것저것
+  - title: 공부 내용
     post_list:
       category: MODEL
       show_more: true
