--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ entries:
   - title: 소개
     entries:
       - title: Natural Language Processing, Machine Learning
-      
+      - title: |
   - title: NLP Task 연구
     post_list:
       category: STUDY
