--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,8 +4,9 @@
 entries:
   - title: 소개
     entries:
-      - title: >
-          Natural Language Processing, Machine Learning
+      - title: |
+          Natural Language Processing
+          Machine Learning
       
   - title: NLP Task 연구
     post_list:
