--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,9 +3,9 @@
 
 entries:
   - title: 소개
-    entries: |
+    entries:
       - title: Natural Language Processing, Machine Learning
-          </br>
+          </br> /
       
   - title: NLP Task 연구
     post_list:
