--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,9 +5,8 @@ entries:
   - title: 소개
     entries:
       - title: Natural Language Processing, Machine Learning
-          </br> /
       
-  - title: NLP Task 연구
+  - title: </br>NLP Task 연구
     post_list:
       category: STUDY
       show_more: true
