--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: JJAPGGURI is STUDYing NLP # name of the site
+title: GGURI is studying NLP # name of the site
 author: 규리 # name of site's author
 email: gguriskku@gmail.com # email of site's author
 url: https://jjapagguri.github.io/ # root address of the site
